php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26285 escapeshellarg uses wrong quotes on windows
Submitted: 2003-11-17 06:43 UTC Modified: 2003-11-19 10:32 UTC
From: jb at ez dot no Assigned: iliaa (profile)
Status: Closed Package: *General Issues
PHP Version: 4.3.3 OS: Windows
Private report: No CVE-ID: None
 [2003-11-17 06:43 UTC] jb at ez dot no
Description:
------------
The escapeshellarg function in PHP creates wrongly escaped text on 
windows. It seems it always uses the single-quote (') for escaping the 
strings, however on windows the correct way to escape is using the 
double-quote (") character. 
 
The same problems seems to be in the escapeshellcmd function as 
well. 

Reproduce code:
---------------
escapeshellarg( "-arg value" );

Expected result:
----------------
"-arg value" 

Actual result:
--------------
'-arg value' 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-11-19 10:32 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC