Fixed bug #26285 (escapeshellarg() uses wrong quotes on windows).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@144594 c90b9560-bf6c-de11-be94-00142212c4b1